--- a/gravity.html
+++ b/gravity.html
@@ -117,25 +117,27 @@
             top: 50%;
             left: 20px;
             transform: translateY(-50%);
-            width: 60px;
-            height: 60px;
-            border: 2px solid #333;
+            width: 80px;
+            height: 80px;
+            border: 3px solid #e74c3c;
             border-radius: 50%;
-            background: rgba(0,0,0,0.8);
+            background: rgba(0,0,0,0.9);
             display: flex;
             align-items: center;
             justify-content: center;
             z-index: 50;
+            box-shadow: 0 4px 15px rgba(231, 76, 60, 0.3);
         }
         
         .rotation-arrow {
             width: 0;
             height: 0;
-            border-left: 8px solid transparent;
-            border-right: 8px solid transparent;
-            border-bottom: 12px solid #e74c3c;
+            border-left: 12px solid transparent;
+            border-right: 12px solid transparent;
+            border-bottom: 25px solid #e74c3c;
             transform-origin: center;
             transition: transform 0.1s ease;
+            filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
         }
         
         .goal-indicator {
