--- a/gravity.html
+++ b/gravity.html
@@ -171,12 +171,12 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     
-    <div class="controls-info">
+    <!-- <div class="controls-info">
         <div class="instruction">🎮 <strong>Rotation Physics</strong></div>
         <div class="instruction">📱 Rotate device to change gravity</div>
         <div class="instruction">🔒 Screen stays portrait</div>
         <div class="instruction">⌨️ Arrow keys for desktop</div>
-    </div>
+    </div> -->
     
     <div class="rotation-indicator">
         <div class="rotation-arrow" id="rotation-arrow"></div>
